fixed landing img alignment

--- a/mobileRes.css
+++ b/mobileRes.css
@@ -84,7 +84,7 @@
         transition: var(--btnTransition);
     }
     .landing-img {
-        margin-top: -200px;
+        margin-top: -100px;
         height: 40%;
     }
 
